Fix text wrapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -161,10 +161,13 @@
 
 .event-card {
   display: inline-block;
+  vertical-align: top;
   height: 200px;
   width: 300px;
   padding: 20px;
   margin: 0 10px;
+
+  white-space: normal;
 
   background-color: white;
   color: #333333;
@@ -284,6 +287,7 @@
     white-space: normal;
     overflow-y: auto;
     max-height: 500px;
+    max-width: 400px;
   }
   .event-card {
     margin: 10px 0;
